--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -7,15 +7,14 @@ permalink: policies
 ---
 
 ## Meetings and Recitations
-Lecture occurs twice a week (Tuesdays and Thursdays) from 1:00 - 2:25 pm in 119
-Kerckhoff. These sessions will involve lecture and in-class participation
+Lecture occurs twice a week (Tuesdays and Thursdays) from 1:00 - 2:25 pm in the Baxter lecture hall. These sessions will involve lecture and in-class participation
 including back-of-the-envelope estimations, derivations, and natural
 philosophy. This course is designed to serve as an overview of some of the
 overarching principles of biological inquiry and address how biology fits in
 along physics, chemistry, mathematics, and engineering.
 
 Recitation sessions are held once a week. These occur in the evening on
-Monday's through Thursdays and on Friday afternoons. These sessions are held
+Mondays through Thursdays and on Friday afternoons. These sessions are held
 with graduate and undergraduate teaching assistants and are designed to aid you
 on problem sets and further explain the topics covered in class.
 
@@ -24,14 +23,15 @@ era. Many homework problems will require you to write computer programs to
 execute  calculations, analyze experimental data, perform simulations, and
 more. No prior computer programming experience is required for this course. The
 TA's will host computational tutorial sessions five times during the course and
-will take during normal recitation times and locations. While many programming
+will take place during normal recitation times and locations. While many programming
 languages are used in biology (R, C++, Java, Matlab, etc), Python will be the
 language of instruction for this course. Please see the [programming page]({{
 site.baseurl }}/programming) for instructions on setting up a scientific Python
 computing environment.
 
 ## Homework
-Homework will be assigned on Thursdays will be due the following Thursday at the beginning of class. **All homework submissions are electronic and must be in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages` will not be accepted.**
+Homework will be assigned on Thursdays will be due the following Thursday at the beginning of class. **All homework submissions are electronic and must be in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages` will not be accepted. If you are writing your entire homework in the Jupyter
+notebook, you may submit it as a `.ipynb` file only. You do not need to convert it to PDF.**
 
 To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
 
