Updated homework submission policy

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -16,6 +16,9 @@ To ensure proper grading, all homework must be submitted via email to `bi1.calte
   * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#.ipynb`** for
   problems requiring code.
 
+
+If you are writing your entire homework in the Jupyter notebook, you may submit the .ipynb file directly along with any images that you are embedding in the notebook (images being and pictures other than plots) in your email. In this case, you do **not** need to submit a PDF.
+
 The subject line of your submission email must have the following format:
 
   * **`[Homework #] Submission of HW# for Firstname Lastname`**
