Updated the rec descriptions

--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -39,12 +39,12 @@ permalink: syllabus
 
 | Week | Topic |
 | :--: | -- |
-| 1 | Introduction to Python and basic DNA sequence analysis |
-| 2 | Order of magnitude estimates of the central dogma and trophic cascades |
-| 3 | Probing deep time using radiometric dating and order-of-magnitude estimates about mutations over time. |
-| 4 | Writing stochastic simulations in Python and influence of genetic drift.|
-| 5 | Principles and mechanism of photosynthesis |
-| 6 | Introduction to quantitative image processing using Python. |
-| 7 | Performing non-linear regression. |
+| 1 | Introduction to Python and basic DNA sequence analysis. |
+| 2 | This week section will consist of two parts.  The first will be a series of estimates concerning the processes of the central dogma.  For example, we will figure out how many ribosomes there are per cell and how fast they can crank out proteins. The second part will focus on how to formulate and solve the differential equations of population dynamics. |
+| 3 | This week section will explore the subject of deep time.  We begin by formulating ideas of how to date fossils using radioactive decay.  With those ideas in hand, we then explore the molecular clock as revealed by sequence evolution. |
+| 4 |  This week is a computational section on stochastic simulation.  The objective of these simulations is to explore the competing forces of evolution such as genetic drift, selection and mutation. |
+| 5 | To be determined. |
+| 6 | To be determined. |
+| 7 | To be determined. |
 | 8 | To be determined. |
 | 9 | To be determined. |
