Added next homework and a paper.

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -17,6 +17,11 @@ share these notes with anyone outside of the course.
 
 [Lecture 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec02_Biogeography_Pathogens.pdf) \| We finish up our puzzle of oceanic islands and examine biogeography in the context of microbial pathogens.
 
+[Lecture 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec03_Biogeography_Pathogens_Continued.pdf) \| We conclude our discussion of biogeography by solving the puzzle of the 2010 Haitian cholera outbreak.
+
+<!-- [Lecture 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec04_Trophic_Cascades.pdf) \|
+ -->
+ 
 ## In-Class Readings
 
 Readings mentioned specifically in class will be listed here as the course progresses.
