--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -20,6 +20,8 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[**data set**]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
 
+* [Tutorial 2: Numerical Integration]({{ site.baseurl }}/code/t02_numerical_integration.html) \| Here, you will learn how to write your own Forward-Euler numerical integrator to  investigate radioactive decay.
+
 <!-- * [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t02_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift. -->
 
 ## External resources
