--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -30,7 +30,7 @@ For example, a submission for the first homework set would be submitted by email
 ## Assignments
  **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [**\[data set\]**](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)
 
- **Homework 2** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
+ **[Homework 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
 
  **Homework 3** \| *Evolution*. Due April 27, 2017  by 1:00pm
 
