Added lecture slides.

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -19,9 +19,9 @@ share these notes with anyone outside of the course.
 
 [Lecture 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec03_Biogeography_Pathogens_Continued.pdf) \| We conclude our discussion of biogeography by solving the puzzle of the 2010 Haitian cholera outbreak.
 
-<!-- [Lecture 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec04_Trophic_Cascades.pdf) \|
- -->
- 
+[Lecture 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec04_Trophic_Cascades.pdf) \| The concept of keystone species and trophic cascades are introduced, along with a brief description of the coming homework.
+
+
 ## In-Class Readings
 
 Readings mentioned specifically in class will be listed here as the course progresses.
