--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -28,7 +28,7 @@ For example, a submission for the first homework set would be submitted by email
 **Any submission not abiding by this format will not be graded!**
 
 ## Assignments
- **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [**\[data set\]**](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)
+ **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/hw1_biogeography_solutions_Sp2017.pdf)
 
  **[Homework 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
 
