Added link to lecture slides for day 5

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -21,6 +21,7 @@ share these notes with anyone outside of the course.
 
 [Lecture 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec04_Trophic_Cascades.pdf) \| The concept of keystone species and trophic cascades are introduced, along with a brief description of the coming homework.
 
+[Lecture 5](http://www.rpgroup.caltech.edu/bi1_2017/protected/Bi1_Sp2017_lec05_Fossil_Record.pdf) \| We give a brief history of dinosaurs and the fossil record and examine the limb-to-fin transition in the context of whales.
 
 ## In-Class Readings
 
