Update of hw submission policies

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -8,7 +8,7 @@ permalink: homework
 
 ## Submission
 **All homework submissions are electronic and must be
-in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages`
+in PDF (text) or `.ipynb` (code) format **within a `.zip` file**. Formats such as `.docx` and `.pages`
 will not be accepted.**
 
 To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
@@ -23,7 +23,10 @@ The subject line of your submission email must have the following format:
 
   * **`[Homework #] Submission of HW# for Firstname Lastname`**
 
-For example, a submission for the first homework set would be submitted by email with the subject line **`[Homework 1] Submission of HW1 for Barbara MacClintock`**. The attachments would be **`McClintock_Barbara_hw1.pdf`** and **`McClintock_Barbara_hw1.ipynb`**.
+For example, a submission for the first homework set would be submitted by
+email with the subject line **`[Homework 1] Submission of HW1 for Barbara
+McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** containing the files **`McClintock_Barbara_hw1.pdf`** and
+**`McClintock_Barbara_hw1.ipynb`** as well as any image files used in the `.ipynb` document. 
 
 **Any submission not abiding by this format will not be graded!**
 
