--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -30,8 +30,13 @@ site.baseurl }}/programming) for instructions on setting up a scientific Python
 computing environment.
 
 ## Homework
-Homework will be assigned on Thursdays will be due the following Thursday at the beginning of class. **All homework submissions are electronic and must be in PDF (text) or `.ipynb` (code) format. Formats such as `.docx` and `.pages` will not be accepted. If you are writing your entire homework in the Jupyter
-notebook, you may submit it as a `.ipynb` file only. You do not need to convert it to PDF.**
+Homework will be assigned on Thursdays will be due the following Thursday at
+the beginning of class. All homework submissions are electronic and must be in
+PDF (text) or `.ipynb` (code) format within a `.zip` file. Formats such as
+`.docx` and `.pages` will not be accepted. If you are writing your entire
+homework in the Jupyter notebook, you may submit it as a `.ipynb` file only.
+You do not need to convert it to PDF.
+
 
 To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
 
@@ -44,10 +49,8 @@ The subject line of your submission email must have the following format:
 
 For example, a submission for the first homework set would be submitted by
 email with the subject line **`[Homework 1] Submission of HW1 for Barbara
-McClintock`**. The attachments would be **`McClintock_Barbara_hw1.pdf`** and
-**`McClintock_Barbara_hw1.ipynb`**.
-
-
+McClintock`**. The attachment would be  **`McClintock_Barbara_hw1.zip`** containing the files **`McClintock_Barbara_hw1.pdf`** and
+**`McClintock_Barbara_hw1.ipynb`** and any image files used in the `.ipynb` document.
 
 **Any submission not abiding by this format will not be graded!**
 
