Updated homework policies for clarity.

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -13,8 +13,8 @@ will not be accepted.**
 
 To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
 
-  * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#.ipynb`** for
-  problems requiring code.
+  * **`lastname_firstname_hw#.zip`** containing the files **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#.ipynb`** for
+  problems requiring code along with any images used in the `.ipynb` file.
 
 
 If you are writing your entire homework in the Jupyter notebook, you may submit the .ipynb file directly along with any images that you are embedding in the notebook (images being and pictures other than plots) in your email. In this case, you do **not** need to submit a PDF.
@@ -26,7 +26,7 @@ The subject line of your submission email must have the following format:
 For example, a submission for the first homework set would be submitted by
 email with the subject line **`[Homework 1] Submission of HW1 for Barbara
 McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** containing the files **`McClintock_Barbara_hw1.pdf`** and
-**`McClintock_Barbara_hw1.ipynb`** as well as any image files used in the `.ipynb` document. 
+**`McClintock_Barbara_hw1.ipynb`** as well as any image files used in the `.ipynb` document.
 
 **Any submission not abiding by this format will not be graded!**
 
