--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -40,8 +40,9 @@ You do not need to convert it to PDF.
 
 To ensure proper grading, all homework must be submitted via email to `bi1.caltech [at] gmail [dot] com` with the following filename:
 
-  * **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#.ipynb`** for
-  problems requiring code.
+* **`lastname_firstname_hw#.zip`** containing the files **`lastname_firstname_hw#.pdf`** or **`lastname_firstname_hw#.ipynb`** for
+problems requiring code along with any images used in the `.ipynb` file.
+
 
 The subject line of your submission email must have the following format:
 
