--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -35,7 +35,7 @@ McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** contain
 
  **[Homework 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
 
- **Homework 3** \| *Evolution*. Due April 27, 2017  by 1:00pm
+ **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm
 
  **Homework 4** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
 
