Added recitation materials

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -23,6 +23,16 @@ share these notes with anyone outside of the course.
 
 [Lecture 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec05_Fossil_Record.pdf) \| We give a brief history of dinosaurs and the fossil record and examine the limb-to-fin transition in the context of whales.
 
+
+
+## Recitation Notes
+Materials relevant to the recitations will be posted here as the course carries
+onward.
+
+[Recitation 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec01_central_dogma.pdf) \| This presentation has some interesting images to use for
+making estimates about the central dogma and we introduce the problem of
+the reintroduction of wolves to Yellowstone National Park. [\[ PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec01_central_dogma_notes.pdf)[\[ data set \]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/yellowstone.zip)[ \[paper\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Goldberg.pdf)
+
 ## In-Class Readings
 
 Readings mentioned specifically in class will be listed here as the course progresses.
