Added the next lecture.

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -23,6 +23,8 @@ share these notes with anyone outside of the course.
 
 [Lecture 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec05_Fossil_Record.pdf) \| We give a brief history of dinosaurs and the fossil record and examine the limb-to-fin transition in the context of whales.
 
+[Lecture 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec06_fossil_record_continued.pdf) \| We conclude our discussion of the fossil record
+and examine the evolution of whales in the context of molecules and genes. We also briefly discuss the fin-to-limb transition and the transitional form *Tiktaalik*.
 
 
 ## Recitation Notes
