--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -34,6 +34,8 @@ McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** contain
  **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
 
  **[Homework 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf)** \| *Trophic levels.* Due April 20, 2017  by 1:00pm
+[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_Sp2017.pdf)[\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_jupyter_notebook_Sp2017.html)
+
 
  **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm
 
