--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -26,14 +26,18 @@ share these notes with anyone outside of the course.
 [Lecture 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec06_fossil_record_continued.pdf) \| We conclude our discussion of the fossil record
 and examine the evolution of whales in the context of molecules and genes. We also briefly discuss the fin-to-limb transition and the transitional form *Tiktaalik*.
 
+[Lecture 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec07_facts_of_evolution.pdf) \| The facts of evolution.
 
 ## Recitation Notes
 Materials relevant to the recitations will be posted here as the course carries
 onward.
 
-[Recitation 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec01_central_dogma.pdf) \| This presentation has some interesting images to use for
+[Recitation 2](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec02_central_dogma.pdf) \| This presentation has some interesting images to use for
 making estimates about the central dogma and we introduce the problem of
-the reintroduction of wolves to Yellowstone National Park. [\[PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec01_central_dogma_notes.pdf)[\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/yellowstone.zip)[ \[paper\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Goldberg2014.pdf)
+the reintroduction of wolves to Yellowstone National Park. [\[PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec02_central_dogma_notes.pdf)[\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/yellowstone.zip)[ \[paper\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Goldberg2014.pdf)
+
+
+[Recitation 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time.pdf) \| This presentation has some details about deep time along with some fun order-of-magnitude estimates to understand how genetic information changes with time. [\[PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017/rec03_deep_time_notes.pdf)
 
 ## In-Class Readings
 
