Added the correct SSA tutorial and updated link

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -22,7 +22,7 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 2: Numerical Integration]({{ site.baseurl }}/code/t02_numerical_integration.html) \| Here, you will learn how to write your own Forward-Euler numerical integrator to  investigate radioactive decay.
 
-<!-- * [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t02_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift. -->
+* [Tutorial 2: Stochastic Simulations]({{ site.baseurl }}/code/t03_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
