Added link to HW3 on the syllabus.

--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -16,7 +16,7 @@ permalink: syllabus
 | 2 | Tuesday, April 11 | We conclude our exploration of biogeography and the 2010 Haitian cholera outbreak. | |
 | 2 | Thursday, April 13 | We discuss the role of predators in ecosystems through trophic cascades.| [Homework 2 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw2_trophic_cascades_Sp2017.pdf), Homework 1 Due |
 | 3 | Tuesday, April 18 | We begin our discussion of the evolution of whales and examine the perfections of the fossil record. | |
-| 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | Homework 3 Released, Homework 2 Due |
+| 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | [Homework 3 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf), Homework 2 Due |
 | 4 | Tuesday, April 25 | The key facts of evolution and how we know how about them: variation, heritability, the forces of evolution. | |
 | 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | Homework 4 Released, Homework 3 Due |
 | 5 | Tuesday, May 2 | How do cells make a living? | |
