Added links to homework 4

--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -18,7 +18,7 @@ permalink: syllabus
 | 3 | Tuesday, April 18 | We begin our discussion of the evolution of whales and examine the perfections of the fossil record. | |
 | 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | [Homework 3 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf), Homework 2 Due |
 | 4 | Tuesday, April 25 | The key facts of evolution and how we know how about them: variation, heritability, the forces of evolution. | |
-| 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | Homework 4 Released, Homework 3 Due |
+| 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | [Homework 4 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf), Homework 3 Due |
 | 5 | Tuesday, May 2 | How do cells make a living? | |
 | 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | Homework 5 Released, Homework 4 Due |
 | 6 | Tuesday, May 9 | Cell biology, organelles, and phase transitions. We examine how cells organize their intracellular milieu. | |
