--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -39,7 +39,7 @@ McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** contain
 
  **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm
 
- **Homework 4** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
+ **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
 
  **Homework 5** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
 
