--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -28,6 +28,10 @@ and examine the evolution of whales in the context of molecules and genes. We al
 
 [Lecture 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec07_facts_of_evolution.pdf) \| The facts of evolution.
 
+
+[Lecture 8](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec08_pop_gen.pdf) \| We do a quick recap of the facts of evolution and discuss
+the mathematics behind the idea of genetic drift.
+
 ## Recitation Notes
 Materials relevant to the recitations will be posted here as the course carries
 onward.
