Added link to solutions for homework 3

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -37,7 +37,7 @@ McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** contain
 [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_Sp2017.pdf)[\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw2_trophic_cascades_solutions_jupyter_notebook_Sp2017.html)
 
 
- **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm
+ **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solution_jupyter_notebook_Sp2017.html)
 
  **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
 
