Added location for an office hours section.

--- a/_posts/2017-01-31-about.md
+++ b/_posts/2017-01-31-about.md
@@ -39,7 +39,7 @@ recitation.
 | Monday | 4:00pm - 5:00pm | Broad 100 | Lily, Soichi, and Tal|
 | Monday | 9:00pm - 10:00pm | Broad 100 | Bill and William |
 | Monday | 10:00pm - 11:00pm | Broad 100 | Muir and Caroline |
-| Tuesday | 3:00pm - 4:00pm | *TBD* | Sasha and Emily Meany | 
+| Tuesday | 3:00pm - 4:00pm | Broad 100 | Sasha and Emily Meany | 
 | Tuesday | 9:00pm - 10:00pm | Broad 100 | Suzy and Emily Miaou |
 | Tuesday | 10:00pm - 11:00pm | Broad 100 | Griffin and Anvita |
 | Wednesday | 2:30pm - 3:30pm | Broad 159 | Rob |
