--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -19,8 +19,8 @@ permalink: syllabus
 | 3 | Thursday, April 20 | Deep time and the molecular evidence for evolution. | [Homework 3 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf), Homework 2 Due |
 | 4 | Tuesday, April 25 | The key facts of evolution and how we know how about them: variation, heritability, the forces of evolution. | |
 | 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | [Homework 4 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf), Homework 3 Due |
-| 5 | Tuesday, May 2 | How do cells make a living? | |
-| 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | Homework 5 Released, Homework 4 Due |
+| 5 | Tuesday, May 2 | Photosynthesis and eating the sun. | |
+| 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | [Homework 5 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf), Homework 4 Due |
 | 6 | Tuesday, May 9 | Cell biology, organelles, and phase transitions. We examine how cells organize their intracellular milieu. | |
 | 6 | Thursday, May 11 | How do cells decide what to eat? We examine the regulation of gene expression through the lens of statistical mechanics. | Homework 6 Released, Homework 5 Due |
 | 7 | Tuesday, May 16 |  How do you build a fly? A detailed dissection of the basics of *Drosophila* morphogenesis. | |
