--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -41,7 +41,7 @@ McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** contain
 
  **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
 
- **Homework 5** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
+ **[Homework 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
 
  **Homework 6** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm
 
