--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -21,16 +21,16 @@ permalink: syllabus
 | 4 | Thursday, April 27 | The evolutionary driving forces of genetic drift and selection. | [Homework 4 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf), Homework 3 Due |
 | 5 | Tuesday, May 2 | Photosynthesis and eating the sun. | |
 | 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | [Homework 5 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf), Homework 4 Due |
-| 6 | Tuesday, May 9 | Cell biology, organelles, and phase transitions. We examine how cells organize their intracellular milieu. | |
-| 6 | Thursday, May 11 | How do cells decide what to eat? We examine the regulation of gene expression through the lens of statistical mechanics. | Homework 6 Released, Homework 5 Due |
+| 6 | Tuesday, May 9 | The mathematics of genetic regulation - Part 1. | |
+| 6 | Thursday, May 11 | The mathematics of genetic regulation - Part 2. | Homework 6 Released, Homework 5 Due |
 | 7 | Tuesday, May 16 |  How do you build a fly? A detailed dissection of the basics of *Drosophila* morphogenesis. | |
-| 7 | Thursday, May 18 | How do cells decide where to go? We work out bacterial chemotaxis from the ground up. | Homework 7 Released, Homework 6 Due |
+| 7 | Thursday, May 18 | DNA Packaging - How do cells organize their meter long genome? | Homework 7 Released, Homework 6 Due |
 | 8 | Tuesday, May 23 | How do cells sense? We discuss the physical limits of chemical detection. | |
 | 8 | Thursday, May 25 | How well can you see? We work through the biology of vision. | Homework 8 Released, Homework 7 Due |
 | 9 | Tuesday, May 30 |  Physical limits to how cells and organisms detect stimuli from the world around them. | |
-| 9 | Thursday, June 1 | Lecture used for material that took longer than expected. | Homework 9 Released, Homework 8 Due |
-| 10 | Tuesday, June 6 | Probability as the language of biology. | |
-| 10 | Thursday, June 8| Where biology fits into modern science and engineering. |  Homework 9 Due |
+| 9 | Thursday, June 1 | Special topics in modern biology. | Homework 9 Released, Homework 8 Due |
+| 10 | Tuesday, June 6 | Probability as the language of biology. What distributions should you change your life for? | |
+| 10 | Thursday, June 8| A summary of our adventure of biological exploration. The role of biology in science mathematics and engineering. |  Homework 9 Due |
 | 11 | Tuesday, June 13 | No Class | |
 | 11 | Thursday, June 15 | No Class | |
 
