--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -32,6 +32,10 @@ and examine the evolution of whales in the context of molecules and genes. We al
 [Lecture 8](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec08_pop_gen.pdf) \| We do a quick recap of the facts of evolution and discuss
 the mathematics behind the idea of genetic drift.
 
+[Lecture 9](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec09_photosynthesis.pdf) \| In this lecture, we examine of turning light into biological material beginning from the quantum mechanics of light absorption through the generation of ATP.
+
+<!-- [Lecture 10](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec10_eating_sugar.pdf) \| These slides are basically supporting material to complement class which was largely interactive and done on the board. -->
+
 ## Recitation Notes
 Materials relevant to the recitations will be posted here as the course carries
 onward.
