--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -29,7 +29,7 @@ language of instruction for this course. Please see the [programming page]({{
 site.baseurl }}/programming) for instructions on setting up a scientific Python
 computing environment.
 
-## Homework
+## Homework and Regrading
 Homework will be assigned on Thursdays will be due the following Thursday at
 the beginning of class. All homework submissions are electronic and must be in
 PDF (text) or `.ipynb` (code) format within a `.zip` file. Formats such as
@@ -53,8 +53,10 @@ email with the subject line **`[Homework 1] Submission of HW1 for Barbara
 McClintock`**. The attachment would be  **`McClintock_Barbara_hw1.zip`** containing the files **`McClintock_Barbara_hw1.pdf`** and
 **`McClintock_Barbara_hw1.ipynb`** and any image files used in the `.ipynb` document.
 
-**Any submission not abiding by this format will not be graded!**
+### **Any submission not abiding by this format will not be graded!**
 
+
+If you are interested in challenging the way your homework was graded, you are limited to 2 challenges total over the term. If you ask for a regrade, your entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel has not been graded properly.  This could result in a net reduction in your grade on that particular homework if your previous graded version on other problems gets “overturned". Your regrades may also be used for grading of improperly submitted homework.
 
 ## Collaboration Policy and the Honor Code
 
