--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -28,7 +28,14 @@ email with the subject line **`[Homework 1] Submission of HW1 for Barbara
 McClintock`**. The attachments would be **`McClintock_Barbara_hw1.zip`** containing the files **`McClintock_Barbara_hw1.pdf`** and
 **`McClintock_Barbara_hw1.ipynb`** as well as any image files used in the `.ipynb` document.
 
-**Any submission not abiding by this format will not be graded!**
+### **Any submission not abiding by this format will not be graded!**
+
+## Regrading
+
+If you are interested in challenging the way your homework was graded, you are limited to 2 challenges total over the term. If you ask for a regrade, your entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel has not been graded properly.  This could result in a net reduction in your grade on that particular homework if your previous graded version on other problems gets “overturned". Your regrades may also be used for grading of improperly submitted homework.
+
+
+
 
 ## Assignments
  **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
