Added info about regrades.

--- a/_posts/2017-01-29-policies.md
+++ b/_posts/2017-01-29-policies.md
@@ -56,7 +56,12 @@ McClintock`**. The attachment would be  **`McClintock_Barbara_hw1.zip`** contain
 ### **Any submission not abiding by this format will not be graded!**
 
 
+
 If you are interested in challenging the way your homework was graded, you are limited to 2 challenges total over the term. If you ask for a regrade, your entire homework will be subjected to the same high level of scrutiny you have requested for the problem you feel has not been graded properly.  This could result in a net reduction in your grade on that particular homework if your previous graded version on other problems gets “overturned". Your regrades may also be used for grading of improperly submitted homework.
+
+To submit a regrade, email your assignment to `bi1.caltech [at] gmail [dot] com` with the following subject line:
+
+`[Homework #] Homework Regrade Request for Firstname Lastname`
 
 ## Collaboration Policy and the Honor Code
 
