Added hw4 solutions and two new tutorials

--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -18,11 +18,16 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 0c: A Primer on Python Syntax]({{ site.baseurl }}/code/t0c_python_syntax_and_plotting.html) \| This tutorial will walk you through the basics of programming in Python.
 
-* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[**data set**]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
+* [Tutorial 1: Basic DNA Sequence Analysis]({{ site.baseurl }}/code/t01_sequence_analysis.html) \| This tutorial will introduce you to reading and analyzing DNA sequences from a file. [[data set]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/mabuya_atlantica.zip)
 
 * [Tutorial 2: Numerical Integration]({{ site.baseurl }}/code/t02_numerical_integration.html) \| Here, you will learn how to write your own Forward-Euler numerical integrator to  investigate radioactive decay.
 
 * [Tutorial 3: Stochastic Simulations]({{ site.baseurl }}/code/t03_stochastic_simulations.html) \| Here, we summarize how to write stochastic simulations and examine one-dimensional diffusion and genetic drift.
+}}
+
+* [Tutorial 4: Quantitative Image Processing]({{ site.baseurl }}/code/t04_quantiative_image_processing.html) \| In this tutorial, you will learn some principles of computational image processing and more details about how we experimentally test our predictions regarding the fold-change in gene expression. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
+
+* [Tutorial 5: Nonlinear Regression]({{ site.baseurl }}/code/t05_nonlinear_regression) \| One of the most useful skills any scientist can possess is a strong knowledge of statistics. Here, we will stick our toes in these waters by learning how to perform a nonlinear regression on a single parameter. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ross_fanelli_1958.csv)
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
