--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -40,9 +40,6 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
 
 
-
-
-
 ## Assignments
  **[Homework 1](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw1_biogeography_Sp2017.pdf)** \| *Biogeography*. Due April 13, 2017  by 1:00 pm. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/hw1_dataset.zip)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw1_biogeography_solutions_Sp2017.pdf)
 
@@ -52,7 +49,7 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
  **[Homework 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw3_evolution_Sp2017.pdf)** \| *Evolution*. Due April 27, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw3_evolution_solution_jupyter_notebook_Sp2017.html)
 
- **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm
+ **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_code_solutions_Sp2017.html)
 
  **[Homework 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
 
