Updated the recitation schedule.

--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -43,8 +43,8 @@ permalink: syllabus
 | 2 | This week section will consist of two parts.  The first will be a series of estimates concerning the processes of the central dogma.  For example, we will figure out how many ribosomes there are per cell and how fast they can crank out proteins. The second part will focus on how to formulate and solve the differential equations of population dynamics. |
 | 3 | This week section will explore the subject of deep time.  We begin by formulating ideas of how to date fossils using radioactive decay.  With those ideas in hand, we then explore the molecular clock as revealed by sequence evolution. |
 | 4 |  This week is a computational section on stochastic simulation.  The objective of these simulations is to explore the competing forces of evolution such as genetic drift, selection and mutation. |
-| 5 | To be determined. |
-| 6 | To be determined. |
+| 5 | We will examine the processes of photosynthesis in further detail by performing some street-fighting estimates and looking at the influence of photosynthesis on life as we know it. |
+| 6 | This week, we will go into detail about how to quantitatively analyze microscopy images. |
 | 7 | To be determined. |
 | 8 | To be determined. |
 | 9 | To be determined. |
