--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -53,7 +53,7 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
  **[Homework 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
 
- **Homework 6** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm
+ **[Homework 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm
 
  **Homework 7** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm
 
