--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -36,6 +36,8 @@ the mathematics behind the idea of genetic drift.
 
 [Lecture 10](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec10_eating_sugar.pdf) \| These slides are basically supporting material to complement class which was largely interactive and done on the board.
 
+[Lecture 11 & 12](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec11-12_gene_regulation.pdf) \| We derive quantitative models of gene expression using our knowledge of mRNA production and degradation rates as well as through a statistical mechanical approach. The bulk of these lectures were performed on the blackboard.
+
 ## Recitation Notes
 Materials relevant to the recitations will be posted here as the course carries
 onward.
@@ -46,6 +48,8 @@ the reintroduction of wolves to Yellowstone National Park. [\[PDF notes\]](http:
 
 
 [Recitation 3](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time.pdf) \| This presentation has some details about deep time along with some fun order-of-magnitude estimates to understand how genetic information changes with time. [\[PDF notes\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_rec03_deep_time_notes.pdf)
+
+[Recitation 5](http://www.rpgroup.caltech.edu/bi1_2017/protected/Bi1_Sp2017_rec05_photosynthesis.pdf) \| These slides cover the principles of photosynthesis in a little more depth along with some fun estimates.
 
 ## In-Class Readings
 
