added links to homework 7

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -55,7 +55,7 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
  **[Homework 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/RNAP_matrix.txt)
 
- **Homework 7** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm
+ **[Homework 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf)** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm [\[Garcia and Phillips 2011 data file\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacZ_titration_data.csv) [\[image data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
 
  **Homework 8** \| *The Body Plan*. Due June 1, 2017  by 1:00pm
 
