--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -22,9 +22,9 @@ permalink: syllabus
 | 5 | Tuesday, May 2 | Photosynthesis and eating the sun. | |
 | 5 | Thursday, May 4 | How do sugar molecules turn into cells?  | [Homework 5 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf), Homework 4 Due |
 | 6 | Tuesday, May 9 | The mathematics of genetic regulation - Part 1. | |
-| 6 | Thursday, May 11 | The mathematics of genetic regulation - Part 2. | Homework 6 Released, Homework 5 Due |
+| 6 | Thursday, May 11 | The mathematics of genetic regulation - Part 2. | [Homework 6 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf), Homework 5 Due |
 | 7 | Tuesday, May 16 |  How do you build a fly? A detailed dissection of the basics of *Drosophila* morphogenesis. | |
-| 7 | Thursday, May 18 | DNA Packaging - How do cells organize their meter long genome? | Homework 7 Released, Homework 6 Due |
+| 7 | Thursday, May 18 | DNA Packaging - How do cells organize their meter long genome? | [Homework 7 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf), Homework 6 Due |
 | 8 | Tuesday, May 23 | How do cells sense? We discuss the physical limits of chemical detection. | |
 | 8 | Thursday, May 25 | How well can you see? We work through the biology of vision. | Homework 8 Released, Homework 7 Due |
 | 9 | Tuesday, May 30 |  Physical limits to how cells and organisms detect stimuli from the world around them. | |
