Updated the website with more readings and the new tutorial.

--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -38,6 +38,9 @@ the mathematics behind the idea of genetic drift.
 
 [Lecture 11 & 12](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec11-12_gene_regulation.pdf) \| We derive quantitative models of gene expression using our knowledge of mRNA production and degradation rates as well as through a statistical mechanical approach. The bulk of these lectures were performed on the blackboard.
 
+
+[Lecture 15 & 16](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec15-16_chemotaxis.pdf) \| We investigate how bacterial cells measure concentrations of molecules in their environment and control their directed motion. As with lectures 11 & 12, the bulk of this material was performed on the blackboard.
+
 ## Recitation Notes
 Materials relevant to the recitations will be posted here as the course carries
 onward.
