--- a/_posts/2017-01-25-code.md
+++ b/_posts/2017-01-25-code.md
@@ -27,7 +27,9 @@ progresses, these materials will be posted below. **Note:** *In some browsers (F
 
 * [Tutorial 4: Quantitative Image Processing]({{ site.baseurl }}/code/t04_quantitative_image_processing.html) \| In this tutorial, you will learn some principles of computational image processing and more details about how we experimentally test our predictions regarding the fold-change in gene expression. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ecoli_images.zip)
 
-* [Tutorial 5: Nonlinear Regression]({{ site.baseurl }}/code/t05_nonlinear_regression) \| One of the most useful skills any scientist can possess is a strong knowledge of statistics. Here, we will stick our toes in these waters by learning how to perform a nonlinear regression on a single parameter. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ross_fanelli_1958.csv)
+* [Tutorial 5: Nonlinear Regression]({{ site.baseurl }}/code/t05_nonlinear_regression.html) \| One of the most useful skills any scientist can possess is a strong knowledge of statistics. Here, we will stick our toes in these waters by learning how to perform a nonlinear regression on a single parameter. [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/ross_fanelli_1958.csv)
+
+* [Tutorial 6: Integrating Master Equations]({{ site.baseurl }}/code/t06_chemical_master_equation.html) \| We advance our skills of performing numerical integration from tutorial two to consider the diffusion of particles over time and track their spatial distributions.
 
 ## External resources
 Below is a list of useful online resources for learning the Python programming language and principles of programming in general.
