Added homework 8 and other solutions

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -51,12 +51,12 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
  **[Homework 4](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw4_pop_gen_Sp2017.pdf)** \| *Population Genetics.* Due May 4, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_solutions_Sp2017.pdf) [\[jupyter notebook\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw4_pop_gen_code_solutions_Sp2017.html)
 
- **[Homework 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm
+ **[Homework 5](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw5_photosynthesis_Sp2017.pdf)** \| *Photosynthesis*. Due May 11, 2017  by 1:00pm [\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw5_photosynthesis_solutions_Sp2017.pdf)
 
- **[Homework 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/RNAP_matrix.txt)
+ **[Homework 6](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw6_gene_regulation_1.pdf)** \| *Gene Expression I: Theory*. Due May 18, 2017  by 1:00pm [\[data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/RNAP_matrix.txt)[\[solutions\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/hw6_gene_regulation_1_solutions.pdf)
 
  **[Homework 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf)** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm [\[Garcia and Phillips 2011 data file\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacZ_titration_data.csv) [\[image data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
 
- **Homework 8** \| *The Body Plan*. Due June 1, 2017  by 1:00pm
+[ Homework 8](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf) \| *The Body Plan*. Due June 1, 2017  by 1:00pm [\[data set \]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/drosophila_data.zip)
 
  **Homework 9** \| *Physical Limits*. Due June 8, 2017  by 1:00pm
