--- a/_posts/2017-01-30-syllabus.md
+++ b/_posts/2017-01-30-syllabus.md
@@ -26,7 +26,7 @@ permalink: syllabus
 | 7 | Tuesday, May 16 |  How do you build a fly? A detailed dissection of the basics of *Drosophila* morphogenesis. | |
 | 7 | Thursday, May 18 | DNA Packaging - How do cells organize their meter long genome? | [Homework 7 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf), Homework 6 Due |
 | 8 | Tuesday, May 23 | How do cells sense? We discuss the physical limits of chemical detection. | |
-| 8 | Thursday, May 25 | How well can you see? We work through the biology of vision. | Homework 8 Released, Homework 7 Due |
+| 8 | Thursday, May 25 | Probability as the language of biology.| [Homework 8 Released](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf) Homework 7 Due |
 | 9 | Tuesday, May 30 |  Physical limits to how cells and organisms detect stimuli from the world around them. | |
 | 9 | Thursday, June 1 | Special topics in modern biology. | Homework 9 Released, Homework 8 Due |
 | 10 | Tuesday, June 6 | Probability as the language of biology. What distributions should you change your life for? | |
