Added the link for gregor data

--- a/_posts/2017-01-27-homework.md
+++ b/_posts/2017-01-27-homework.md
@@ -57,6 +57,6 @@ To submit a regrade, email the name of the assignment you would like regraded  t
 
  **[Homework 7](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw7_gene_regulation_2.pdf)** \| *Gene Expression II: Experiment*. Due May 25, 2017  by 1:00pm [\[Garcia and Phillips 2011 data file\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacZ_titration_data.csv) [\[image data set\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/lacI_titration.zip)
 
-[ Homework 8](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf) \| *The Body Plan*. Due June 1, 2017  by 1:00pm [\[data set \]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/drosophila_data.zip)
+[** Homework 8**](http://www.rpgroup.caltech.edu/courses/bi1_2017/homework/hw8_body_plan_Sp2017.pdf) \| *The Body Plan*. Due June 1, 2017  by 1:00pm [\[images \]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/drosophila_data.zip) [\[Gregor et al. data\]](http://www.rpgroup.caltech.edu/courses/bi1_2017/data/gregor_data.csv)
 
  **Homework 9** \| *Physical Limits*. Due June 8, 2017  by 1:00pm
