--- a/_posts/2017-01-24-readings.md
+++ b/_posts/2017-01-24-readings.md
@@ -38,6 +38,7 @@ the mathematics behind the idea of genetic drift.
 
 [Lecture 11 & 12](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec11-12_gene_regulation.pdf) \| We derive quantitative models of gene expression using our knowledge of mRNA production and degradation rates as well as through a statistical mechanical approach. The bulk of these lectures were performed on the blackboard.
 
+[Lectures 13 & 14](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec13-14_body_plan.pdf) \| We look at organismal development using *Drosophila melanogaster* as our model organism. Here, we tie together much of our discussion on diffusion with the positioning of the cephalic furrow via the Bicoid morphogen.
 
 [Lecture 15 & 16](http://www.rpgroup.caltech.edu/courses/bi1_2017/protected/Bi1_Sp2017_lec15-16_chemotaxis.pdf) \| We investigate how bacterial cells measure concentrations of molecules in their environment and control their directed motion. As with lectures 11 & 12, the bulk of this material was performed on the blackboard.
 
